--- a/src/components/Home1.module.css
+++ b/src/components/Home1.module.css
@@ -5,7 +5,7 @@
     width: 100vw;
     max-width: 1440px;
     height: 780px;
-    background: white url("/images/bg-image.svg") center no-repeat fixed;
+    background: white url("/webshop/images/bg-image.svg") center no-repeat fixed;
 }
 
 .card_center{
